test/files/neg/moduleClassReference.check
moduleClassReference.scala:2: error: not found: value Predef$
  def foo = Predef$.MODULE$ == Predef
            ^
1 error
